# rr-calculator

./: .dockerignore  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_CONTAINER.md  Dockerfile  MANUAL_DEPLOYMENT.md  README.md  __init__.py  app.py  capture_screenshots.py  demo_app.py  deploy_container_to_azure.sh  deploy_to_azure.sh  profile_rizzk.py  requirements.txt  rizzk_core.py  rizzk_profile.pstats  smoke_test.py  startup.sh  test_risk_reward.py
.azure/: plan.copilotmd  progress.copilotmd
.devcontainer/: requirements-dev.text
.github/workflows/: apply_patch_and_create_pr.yml  ci.yml  deploy.yml
.streamlit/: README.md  config.toml  migrate.py  migrate_json_to_sqlite.py  mypy.ini  portfolio.py  pyproject.toml
docs/: architecture.md  impact.md  setup.md
tests/: test_rizzk_core.py
